# ShopList

./: .editorconfig  .env  .env.template  Makefile  README.md  docker-compose.dev.yaml  docker-compose.override.yaml  docker-compose.test.yaml  docker-compose.yaml
.utils/: colors
api/: openapi.yaml
backend/: .env.template  .gitignore  Cargo.toml  Dockerfile  Makefile
backend/api/: Cargo.toml  Rocket.toml
backend/api/src/: api_auth_response.rs  api_user_token.rs  cookie.rs  cors.rs  grpc.rs  guards.rs  main.rs  model.rs  route_error.rs  route_handler.rs  utils.rs
backend/api/src/cache/: mod.rs
backend/api/src/db/: mod.rs
backend/api/src/routes/: mod.rs
backend/api/src/routes/category/: mod.rs
backend/api/src/routes/list/: mod.rs
backend/api/src/routes/product/: mod.rs
backend/api/src/routes/tag/: mod.rs
backend/api/src/routes/team/: mod.rs
backend/api/src/routes/user/: login.rs  logout.rs  mod.rs  register.rs
backend/api/src/tests/: mod.rs  openapi.rs
backend/api/src/utils/: mod.rs  uuidwrapper.rs
backend/auth/: Cargo.toml
backend/auth/src/: db.rs  grpc.rs  main.rs
backend/auth/src/tests/: db.rs  mod.rs
backend/model/: Cargo.toml  build.rs
backend/model/src/: api_model.rs  jwt.rs  lib.rs  uuid_wrapper.rs
db/: Makefile  init.sql
docs/: architecture.md  back.md  db.md  front.md
front/: package-lock.json  package.json
front/src/: middleware.ts  mockup.ts  types.ts
front/src/api/: client.ts  conf.ts  types.ts
front/src/api/transport/: fetchTransport.ts
front/src/api/versions/v1/: productService.ts  teamService.ts  types.ts  userService.ts
front/src/components/: navbar.astro  themeToggle.astro
front/src/components/config/: AddMember.tsx  MembersAdministration.tsx  RoleSelector.tsx  UserTeamRole.tsx
front/src/components/date/: DateLabel.tsx  Metadata.tsx
front/src/components/dnd/: Draggable.tsx  Droppable.tsx
front/src/components/form/: ConfigTeamForm.tsx  LoginForm.tsx  NewTeamForm.tsx  RegisterForm.tsx  ValidationFeedback.tsx
front/src/components/form/textField/: CopyTextField.tsx  TextField.tsx  index.ts
front/src/components/list/: AddProduct.tsx  Category.tsx  ListLayout.tsx  Product.tsx
front/src/components/product/: AddProduct.tsx  ModifyProduct.tsx  ProductManager.tsx
front/src/context/: CategoryContext.tsx  ListContext.tsx  categoryReducer.ts  dnd.ts  listReducer.ts
front/src/hooks/: useCachedValue.ts  useExpanded.ts  useForm.ts  useListContext.ts  usePersistedValue.ts
front/src/layouts/: debug.astro  landingPage.astro  page.astro
front/src/pages/: 404.astro  index.astro  login.astro  logout.astro  new.astro  profile.astro  register.astro  teams.astro
front/src/pages/[team_id]/: config.astro  index.astro  security.astro
front/src/pages/[team_id]/lists/: [list].astro  index.astro
front/src/pages/[team_id]/products/: index.astro
front/src/pages/profile/: edit.astro  index.astro
front/src/styles/: form.css  global.css  list.css  product.css
front/src/utils/: index.ts  monad.ts
proto/: auth.proto  helloworld.proto
router/: Dockerfile  Makefile  entrypoint.sh  nginx.conf  nginx.conf.prod
valkey/: Dockerfile  valkey.conf
