[package]
name = "api"
version = "0.4.1"
edition = "2024"

[dependencies]
rocket = { version = "0.5.1", features = ["json", "secrets"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tonic = "0.13.1"
prost = "0.13.5"
tokio = { version = "1.46.1", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.17.0", features = [ "v4", "serde"] }

[build-dependencies]
tonic-build = "0.13.1" # Uses prost 0.13.5
