[package]
name = "api"
version = "0.8.0"
edition = "2024"

[dependencies]
model = { path = "../model", features = ["api"] }
rocket = { version = "0.5.1", features = ["json", "secrets"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tonic = "0.13.1"
tokio = { version = "1.46.1", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.17.0", features = [ "v4", "serde"] }
