[package]
name = "api"
version = "0.11.6"
edition = "2024"

[dependencies]
model = { path = "../model", features = ["api"] }
rocket = { version = "0.5.1", features = ["json", "secrets"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tonic = "0.13.1"
tokio = { version = "1.46.1", features = ["macros", "rt-multi-thread"] }
tokio-postgres = { version = "0.7.13", features = ["with-uuid-1", "with-chrono-0_4"] }
uuid = { version = "1.17.0", features = [ "v4", "serde"] }
env_logger = "0.11.8"
log = "0.4.28"
dotenv = "0.15.0"
fred = "10.1.0"
chrono = "0.4.41"
