[package]
name = "auth"
version = "0.5.0"
edition = "2024"

[dependencies]
tonic = "0.13.1"
prost = "0.13.5"
tokio = { version = "1.46.1", features = ["macros", "rt-multi-thread"] }
tokio-postgres = { version = "0.7.13", features = ["with-uuid-1"] }
dotenv = "0.15.0"
uuid = { version = "1.17.0", features = [ "v4"] }
argon2 = "0.5.3"
rand_core = { version = "0.6.4", features = ["getrandom"] }

[build-dependencies]
tonic-build = "0.13.1" # Uses prost 0.13.5
