[package]
name = "auth"
version = "0.15.0"
edition = "2024"

[dependencies]
model = { path = "../model", features = ["auth"] }
tonic = "0.13.1"
tokio = { version = "1.46.1", features = ["macros", "rt-multi-thread"] }
tokio-postgres = { version = "0.7.13", features = ["with-uuid-1", "with-chrono-0_4"] }
dotenv = "0.15.0"
uuid = { version = "1.17.0", features = [ "v4"] }
argon2 = "0.5.3"
rand_core = { version = "0.6.4", features = ["getrandom"] }
chrono = "0.4.41"
env_logger = "0.11.8"
log = "0.4.28"

[dev-dependencies]
macro_test = { git = "https://github.com/jkutkut/rust-macro-test", tag = "v2.1.0" }
ntest = "0.9.3"
