[package]
name = "model"
version = "0.3.0"
edition = "2024"

[features]
api = []
auth = []

[dependencies]
uuid = { version = "1.17.0", features = [ "v4"] }
serde = { version = "1.0.219", features = ["derive"] }
rocket = { version = "0.5.1" }
tonic = "0.13.1"
prost = "0.13.5"

[build-dependencies]
tonic-build = "0.13.1" # Uses prost 0.13.5
