[package]
name = "model"
version = "0.4.5"
edition = "2024"

[features]
api = []
auth = []

[dependencies]
uuid = { version = "1.17.0", features = [ "v4"] }
serde = { version = "1.0.219", features = ["derive"] }
rocket = { version = "0.5.1" }
tonic = "0.13.1"
prost = "0.13.5"
chrono = "0.4.41"
jsonwebtoken = "9.3.1"
log = "0.4.28"

[build-dependencies]
tonic-build = "0.13.1" # Uses prost 0.13.5
